Integration with SoundCloud

--- a/static/html/main.html
+++ b/static/html/main.html
@@ -16,6 +16,7 @@
     <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/react/0.13.3/react.js"></script>
     <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/react/0.13.3/JSXTransformer.js"></script>
     <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/react-bootstrap/0.25.1/react-bootstrap.min.js"></script>
+    <script type="text/javascript" src="//connect.soundcloud.com/sdk-2.0.0.js"></script>
     <script type="text/javascript" src="/static/js/lib/bootstrap3-typeahead.min.js"></script>
   </head>
   <body>
