--- a/static/html/main.html
+++ b/static/html/main.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Pandora</title>
+    <title>Dandora</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Open+Sans|Source+Sans+Pro|Droid+Sans">
